# RMQ-RSQ-Semga67-

./: CMakeLists.txt  FenwickTree.cpp  FenwickTree.h  PrefixSum1D.cpp  PrefixSum1D.h  PrefixSum2D.h  README.md  RMQNaive.cpp  SegmentTree.h  SparseTable.h  SqrtDecomposition.h  main.cpp
docs/: plot.py
include/: HybridRMQ.h  RMQNaive.h
src/: HybridRMQ.cpp  PrefixSum2D.cpp  SparseTable.cpp  main.cpp
tests/: test_all.cpp
